HOWTO Read Papers

--- a/Notes.tex
+++ b/Notes.tex
@@ -218,5 +218,56 @@
 	\centerline{\url{https://youtu.be/fvM8ow6zNw4?si=AGrOGF7vSZSGt4QK&t=711}}
 \end{frame}
 %----------------------------------------------------------------------------------------
+\begin{frame}{Meeting 3}
+	\begin{block}{Agenda}
+		\begin{itemize}
+			\item HOWTO: Reading Papers
+			\item Unequal Division Na{\"i}vely
+			\item Cutting into 1-sized parts
+			\item Ramsey Partitions
+			\item Near-Halves
+		\end{itemize}
+	\end{block}
+	Next Week: Finish Chapter 3 \& Chapter 4
+\end{frame}
+\begin{frame}{Reading Papers}
+	Let's be honest\\Most papers are dryer than the Sahara Desert\pause
+	\newline
+	\newline
+	So why read papers?
+\end{frame}
 
+\begin{frame}{Reading Papers}
+	\begin{itemize}
+		\item Understanding the field better
+		\item 
+	\end{itemize}
+	Fundamentally, we are learning: But what are we trying to learn?
+\end{frame}
+
+\begin{frame}{Reading Papers}
+	But what are we trying to learn?\\\pause
+	Our goal when reading a paper is to contextualize that paper's findings in the field.
+\end{frame}
+\begin{frame}{Reading Papers}
+	Thankfully, scientists are aware of this, so they write about it.\pause
+	\\Parts of a Paper
+	\begin{itemize}
+		\item Title \& Authors \pause
+		\item Abstract \pause
+		\item Introduction \pause
+		\item Related Works \pause
+		\item Content\pause
+		\item Discussion/Conclusion
+	\end{itemize}
+\end{frame}
+\begin{frame}{PhD}
+	\url{https://matt.might.net/articles/phd-school-in-pictures/IllustratedGuidePhD-Matt-Might.pdf}
+\end{frame}
+ 
+\begin{frame}{Dividing Camels}
+	\includegraphics[width=0.78\linewidth]{Camel}\\
+	First son gets $\frac{1}{2}$. Second son gets $\frac{1}{3}$. Third son gets $\frac{1}{9}$
+\end{frame}
+%-------------------------------------------------------------------------------
 \end{document}
