--- a/Notes.tex
+++ b/Notes.tex
@@ -241,10 +241,10 @@
 %----------------------------------------------------------------------------------------
 \begin{frame}{Reading Papers}
 	\begin{itemize}
-		\item Understanding the current research better \item
-		\item To gain background knowledge \item
-		\item To find interesting questions to work on \item
-		\item Because the professor said so \item
+		\item Understanding the current research better \pause
+		\item To gain background knowledge \pause
+		\item To find interesting questions to work on \pause
+		\item Because the professor said so \pause
 	\end{itemize}
 	Fundamentally, we are learning: But what are we trying to learn?
 \end{frame}
