--- a/Notes.tex
+++ b/Notes.tex
@@ -9,6 +9,7 @@
 \usepackage{booktabs} % Allows the use of \toprule, \midrule and \bottomrule in tables
 \usepackage{media9}
 \usepackage[dvipsnames]{xcolor}
+\usepackage[]{multimedia}
 
 \graphicspath{{./images/}}
 
@@ -31,16 +32,15 @@
 %----------------------------------------------------------------------------------------
 %	PRESENTATION SLIDES
 %----------------------------------------------------------------------------------------
-
 \begin{document}
-% \beamerdefaultoverlayspecification{<+->}
 
+%\beamerdefaultoverlayspecification{<+->}
 \begin{frame}
     % Print the title page as the first slide
     \titlepage
 \end{frame}
 
-\begin{frame}{Overview}
+\begin{frame}[allowframebreaks]{Overview}
     % Throughout your presentation, if you choose to use \section{} and \subsection{} commands, these will automatically be printed on this slide as an overview of your presentation
     \tableofcontents
 \end{frame}
@@ -171,6 +171,7 @@
 	\end{enumerate}
 \end{frame}
 %------------------------------------------------
+\section{Other Fair and Envy-Free Schemes}
 \begin{frame}{Meeting 2}
 	\begin{block}{Agenda}
 		\begin{itemize}
@@ -187,8 +188,8 @@
 \Huge{\centerline{\textbf{Stromquist Envy Free Moving Knife}}}
 \end{frame}
 %------------------------------------------------
-\begin{frame}{Procedure}
-\end{frame}
+%\begin{frame}{Procedure}
+%\end{frame}
 %------------------------------------------------
 \subsection{Austin's Perfect Division for n=2}
 %------------------------------------------------
@@ -197,15 +198,19 @@
 \end{frame}
 %------------------------------------------------
 \begin{frame}{Defining Perfect Division}
-	
+	Perfect Division is the allocation where
+	\[\forall_i V_i(A_i) = \frac{1}{n}\]
+	No bounded algorithm exists for perfect division
 \end{frame}
 %------------------------------------------------
 \begin{frame}{Procedure}
 	\begin{enumerate}
-		\item Players 1...n-1 cut the cake in half
-		\item Player n compares the cake to the left and to the right of middle cut and chooses the piece which they think is bigger.\pause
-		\item Player n and the players on the side n chose repeat the procedure on that side
-		\item The remaining players repeat the procedure on the other side
+		\item Knife moves from left to right
+		\item A player may call stop \pause
+		\item A second knife is placed on the left edge
+		\item Both knives move parallely
+		\item The other player calls stop \pause
+		\item Assign pieces arbitrarily
 	\end{enumerate}
 \end{frame}
 %------------------------------------------------
@@ -216,7 +221,7 @@
 \end{frame}
 %------------------------------------------------
 \begin{frame}{Aziz-Mackenzie Envy-Free Procedure for n}
-	\centerline{\url{https://youtu.be/fvM8ow6zNw4?si=AGrOGF7vSZSGt4QK&t=711}}
+	\centerline{\url{{https://youtu.be/fvM8ow6zNw4?si=AGrOGF7vSZSGt4QK&t=711}}}
 \end{frame}
 %----------------------------------------------------------------------------------------
 \begin{frame}{Meeting 3}
@@ -232,6 +237,8 @@
 	Next Week: Finish Chapter 3 \& Chapter 4
 \end{frame}
 %----------------------------------------------------------------------------------------
+\section{Paper Reading}
+\subsection{Intentions}
 \begin{frame}{Reading Papers}
 	Let's be honest\\Most papers are dryer than the Sahara Desert\pause
 	\newline
@@ -254,6 +261,7 @@
 	Our goal when reading a paper is to contextualize that paper's findings in the field.
 \end{frame}
 %----------------------------------------------------------------------------------------
+\subsection{Structure}
 \begin{frame}{Reading Papers}
 	Thankfully, scientists are aware of this, so they write about it.\pause
 	\\Parts of a Paper
@@ -267,15 +275,19 @@
 	\end{itemize}
 \end{frame}
 %----------------------------------------------------------------------------------------
+\subsection{Illustrated Guide to PhD - Matt Might}
 \begin{frame}{PhD}
 	\url{https://matt.might.net/articles/phd-school-in-pictures/IllustratedGuidePhD-Matt-Might.pdf}
 \end{frame}
 %----------------------------------------------------------------------------------------
+\section{Unequal Division}
+\subsection{Anecdote}
 \begin{frame}{Dividing Camels}
 	\includegraphics[width=0.78\linewidth]{Camel}\\
 	First son gets $\frac{1}{2}$. Second son gets $\frac{1}{3}$. Third son gets $\frac{1}{9}$
 \end{frame}
-%----------------------------------------------------------------------------------------
+%----------------------------------------------------------------------------------------\
+\subsection{Na{\"i}ve Method}
 \begin{frame}{Na{\"i}ve Method}
 	\begin{itemize}
 		\item Duplicate each player proportional to their ratio.\pause
@@ -289,6 +301,7 @@
 	\end{itemize}
 \end{frame}
 %----------------------------------------------------------------------------------------
+\subsection{Cutting Ones}
 \begin{frame}{Cutting Ones}
 	\begin{itemize}
 		\item Similar to the cut-and-choose algorithm\pause
@@ -297,12 +310,13 @@
 	\end{itemize}
 \end{frame}
 %----------------------------------------------------------------------------------------
+\subsection{Ramsey}
 \begin{frame}{Ramsey Partitions}
 	\begin{itemize}
 		\item Ramsey theory is simply the study of edge colorings of complete graphs\pause
 		\item We can observe this finding $R(3, 3)$\pause
+		\item The same property seen in Ramsey Theory can also be used to help partition
 	\end{itemize}
-	The same property seen in Ramsey Theory can also be used to help partition
 \end{frame}
 %-------------------------------------------------------------------------------
 \begin{frame}{Ramsey Partitions}
@@ -315,7 +329,6 @@
 	\end{itemize}
 \end{frame}
 %-------------------------------------------------------------------------------
-%-------------------------------------------------------------------------------
 \begin{frame}{Ramsey Partitions}
 	\begin{itemize}
 		\item This can be simplified using ramsey partitions
@@ -326,6 +339,50 @@
 			\item Otherwise, Player 1 may choose pieces summing to $A_1$ of the unmarked pieces. 
 			\item This works because of the Ramsey Partitioning!
 		\end{enumerate}
+	\end{itemize}
+\end{frame}
+%-------------------------------------------------------------------------------
+\begin{frame}{Meeting 4}
+	\begin{block}{Agenda}
+		\begin{itemize}
+			\item Review
+			\item Halving
+			\item The Serendipity of Disagreement
+			\item \textcolor{Gray}{Summer}
+		\end{itemize}
+	\end{block}
+\end{frame}
+%-------------------------------------------------------------------------------
+\subsection{Halving}
+\begin{frame}{Halving}
+	\begin{itemize}
+		\item Why were ramsey partitions more effective than Cutting Ones? \pause
+		\item They allow us to allocate more of the cake at once \pause
+		\item We can get rid of more of the cake at once by cutting closer to $\frac{1}{2}$ of the cake at once.
+	\end{itemize}
+\end{frame}
+%-------------------------------------------------------------------------------
+\begin{frame}{Halving}
+	\begin{itemize}
+		\item Take the example of dividing 13 with a 8:5 ratio \pause
+		\item Let's draw the tree \pause
+		\item It can be shown that this is at least as good as Ramsey Partitioning.
+	\end{itemize}
+\end{frame}
+%-------------------------------------------------------------------------------
+\section{Disagreement}
+\begin{frame}{Disagreement}
+	\begin{itemize}
+		\item Sometimes it may feel as if differences of opinion cause conflict
+		\item But through the existence of envy-free division, we can see this may actually lead to more social good
+	\end{itemize}
+\end{frame}
+%-------------------------------------------------------------------------------
+\begin{frame}{Disagreement}
+	\begin{itemize}
+		\item Each person divides the cake into n parts (n-1 lines)
+		\item Each person can receive a piece of cake which they think is at least $\frac{1}{n}$ \pause
+		\item If at least 1 person disagrees, there will be a way to allocate with excess
 	\end{itemize}
 \end{frame}
 \end{document}
